# aptos-dex

./: Architecture.md  README.md  integration-example.md
move/: .mocharc.json  CONTRACT_ANALYSIS.md  README.MD  package-lock.json  package.json  tsconfig.json
move/contracts/hyperperp/: Move.toml  README.MD  TRADING_FLOW_DIAGRAM.md  TRADING_FLOW_DOCUMENTATION.md  contract_address.txt
move/contracts/hyperperp/sh_scripts/: deploy.sh  fmt.sh  hyperperp_e2e.sh  init.sh  quick_deploy.sh  run_create_2_messages_script.sh  run_update_message_script.sh  upgrade.sh
move/contracts/hyperperp/sources/: account.move  basic.move  config.move  constants.move  errors.move  events.move  fee.move  gov.move  liquidation.move  managed_coin.move  market_registry.move  oracle_adapter.move  perp_engine.move  positions.move  risk.move  vault.move  vault_coin.move  vault_fa.move
move/contracts/hyperperp/tests/: stress_tests.move  test_end_to_end.move  unit_tests.move
move/tests/: hyperperp-test.ts  matching-engine-integration.ts  my-first-test.ts
next-app/: .example.env  README-TRADING.md  package-lock.json  package.json
next-app/src/app/: globals.css  layout.tsx  manifest.json  page.tsx
next-app/src/app/analytics/: page.tsx
next-app/src/components/: Analytics.tsx  CreateMessage.tsx  MessageBoard.tsx  RootFooter.tsx  RootHeader.tsx
next-app/src/components/message-board/: columns.tsx
next-app/src/components/trading/: AccountBalance.tsx  AccountInitialization.tsx  CreateOrder.tsx  DepositFunds.tsx  MarketSelector.tsx  OrderBook.tsx  OrderWithFreeze.tsx  PositionPanel.tsx  TradingChart.tsx  TradingInterface.tsx  UserOrders.tsx
next-app/src/components/ui/: alert.tsx
next-app/src/components/wallet/: WalletConnection.tsx
next-app/src/lib/: aptos-balance.ts  aptos-deposit.ts  matching-engine-client.ts  useHyperPerpAccount.ts
next-app/src/lib/type/: order.ts
next-app/src/tests/: add-collateral.js  check-user-balance.js  create-account-manual.js  direct-deposit.js  fund-and-deposit.js  init-account.js  init-managed-coin.js  init-vault-properly.js  init-vault.js  register-apt-coins.js  test-deposit-devnet.js  test-order-flow-simple.js  test-order-simple.js  test-order-submission.js  test-user-deposit.js  test-user-signed-freeze.js
rust-matching-engine/: .gitignore  API_DOCUMENTATION.md  APTOS_INTEGRATION.md  CONFIGURATION_SUMMARY.md  Cargo.toml  Dockerfile  PERSISTENCE.md  README.md  config.toml  docker-compose.yml  test_aptos_integration.sh
rust-matching-engine/src/: aptos_client.rs  config.rs  database.rs  main.rs  matching_engine.rs  models.rs  redis_client.rs  settlement.rs
rust-matching-engine/src/api/: deposit.rs  health.rs  markets.rs  mod.rs  orders.rs  user_queries.rs
