[package]
name = "hyperperp-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Aptos SDK
aptos-sdk = "2.0.0"
aptos-types = "0.1.0"

# Web framework
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }

# Serialization
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"

# Error handling
anyhow = "1.0.86"
thiserror = "1.0.61"

# Database
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json"
]}

# Utilities
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Configuration
config = "0.14.0"
dotenvy = "0.15.7"

# Matching engine
orderbook-rs = "0.3.0"

# Async channels
tokio-util = "0.7.11"
futures = "0.3.30"

# HTTP client for Aptos
reqwest = { version = "0.12.4", features = ["json"] }
