[package]
name = "hyperperp-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-rust-sdk = {git = "https://github.com/aptos-labs/aptos-rust-sdk", package = "aptos-rust-sdk"}
aptos-rust-sdk-types = {git = "https://github.com/aptos-labs/aptos-rust-sdk", package = "aptos-rust-sdk-types"}
aptos-crypto = {git = "https://github.com/aptos-labs/aptos-rust-sdk", package = "aptos-crypto"}
#aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

#aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "ca658a0881c4bff4e1dee14c59a7c63608a5b315" }
#aptos-indexer-processor-sdk-server-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "ca658a0881c4bff4e1dee14c59a7c63608a5b315" }

#[patch.crates-io]
#merlin = { git = "https://github.com/aptos-labs/merlin" }
#x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

# Web framework
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }

# Serialization
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"

# Error handling
anyhow = "1.0.86"
thiserror = "1.0.61"

# Database
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json"
]}

# Utilities
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Configuration
config = "0.14.0"
dotenvy = "0.15.7"


# Async channels
tokio-util = "0.7.11"
futures = "0.3.30"

# HTTP client for Aptos
reqwest = { version = "0.12.4", features = ["json"] }

# BCS serialization
bcs = "0.1.4"

# Redis for caching and persistence
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
